out
test.cpp: In function ‘int main()’:
test.cpp:232:16: error: no match for ‘operator=’ (operand types are ‘vb’ {aka ‘std::__debug::vector<bool>’} and ‘vl’ {aka ‘std::__debug::vector<long long int>’})
  232 |     used = vl(N);
      |                ^
In file included from /usr/include/c++/12/vector:74,
                 from /usr/include/c++/12/functional:62,
                 from stdc++.h:71:
/usr/include/c++/12/debug/vector:239:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>& std::__debug::vector<_Tp, _Allocator>::operator=(const std::__debug::vector<_Tp, _Allocator>&) [with _Tp = bool; _Allocator = std::allocator<bool>]’
  239 |       operator=(const vector&) = default;
      |       ^~~~~~~~
/usr/include/c++/12/debug/vector:239:17: note:   no known conversion for argument 1 from ‘vl’ {aka ‘std::__debug::vector<long long int>’} to ‘const std::__debug::vector<bool>&’
  239 |       operator=(const vector&) = default;
      |                 ^~~~~~~~~~~~~
/usr/include/c++/12/debug/vector:242:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>& std::__debug::vector<_Tp, _Allocator>::operator=(std::__debug::vector<_Tp, _Allocator>&&) [with _Tp = bool; _Allocator = std::allocator<bool>]’
  242 |       operator=(vector&&) = default;
      |       ^~~~~~~~
/usr/include/c++/12/debug/vector:242:17: note:   no known conversion for argument 1 from ‘vl’ {aka ‘std::__debug::vector<long long int>’} to ‘std::__debug::vector<bool>&&’
  242 |       operator=(vector&&) = default;
      |                 ^~~~~~~~
/usr/include/c++/12/debug/vector:245:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>& std::__debug::vector<_Tp, _Allocator>::operator=(std::initializer_list<_Tp>) [with _Tp = bool; _Allocator = std::allocator<bool>]’
  245 |       operator=(initializer_list<value_type> __l)
      |       ^~~~~~~~
/usr/include/c++/12/debug/vector:245:46: note:   no known conversion for argument 1 from ‘vl’ {aka ‘std::__debug::vector<long long int>’} to ‘std::initializer_list<bool>’
  245 |       operator=(initializer_list<value_type> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
